# poisson-ssm

./: .gitignore  LICENSE  README.md  entropies.npy  epoch=50-step=11985.ckpt  percent_neurons_above_threshold_6.0_vs_n_neurons.npy  pssm.ipynb  pvae.ipynb  pyproject.toml  run.py  spikes_vs_neurons.npy
figures/: percent_neurons_above_threshold_10.0_vs_n_neurons.npy  percent_neurons_above_threshold_17.0_vs_n_neurons.npy  percent_neurons_above_threshold_2.0_vs_n_neurons.npy  percent_neurons_above_threshold_20.0_vs_n_neurons.npy  percent_neurons_above_threshold_30.0_vs_n_neurons.npy  percent_neurons_above_threshold_4.0_vs_n_neurons.npy  percent_neurons_above_threshold_40.0_vs_n_neurons.npy  percent_neurons_above_threshold_5.0_vs_n_neurons.npy  percent_neurons_above_threshold_6.0_vs_n_neurons.npy  percent_neurons_above_threshold_9.0_vs_n_neurons.npy
networks/: decoder.ckpt  decoder_net_dataset_100_10_8000_100.ckpt  noisy_decoder_net_dataset_100_10_8000_100.ckpt
notebooks/: RTNet-analysis.ipynb  pssm.ipynb  pvae.ipynb  test_pvae.ipynb
pssm/: __init__.py  data.py  decoder.py  encoder.py  pssm.py  utils.py
pvae/: data.py  encoder.py  run.py
src/pvae/: data.py  decoder.py  encoder.py
